@@ -2995,6 +2995,19 @@ name|option
 operator|==
 name|QLatin1String
 argument_list|(
+literal|"QSQLITE_OPEN_URI"
+argument_list|)
+condition|)
+name|openMode
+operator||=
+name|SQLITE_OPEN_URI
+expr_stmt|;
+if|if
+condition|(
+name|option
+operator|==
+name|QLatin1String
+argument_list|(
 literal|"QSQLITE_ENABLE_SHARED_CACHE"
 argument_list|)
 condition|)
