@@ -3153,7 +3153,7 @@ return|;
 block|}
 end_function
 begin_comment
-comment|/*!     Sets database-specific \a options. This must be done before the     connection is opened or it has no effect (or you can close() the     connection, call this function and open() the connection again).      The format of the \a options string is a semicolon separated list     of option names or option=value pairs. The options depend on the     database client used:      \table     \header \li ODBC \li MySQL \li PostgreSQL     \row      \li     \list     \li SQL_ATTR_ACCESS_MODE     \li SQL_ATTR_LOGIN_TIMEOUT     \li SQL_ATTR_CONNECTION_TIMEOUT     \li SQL_ATTR_CURRENT_CATALOG     \li SQL_ATTR_METADATA_ID     \li SQL_ATTR_PACKET_SIZE     \li SQL_ATTR_TRACEFILE     \li SQL_ATTR_TRACE     \li SQL_ATTR_CONNECTION_POOLING     \li SQL_ATTR_ODBC_VERSION     \endlist      \li     \list     \li CLIENT_COMPRESS     \li CLIENT_FOUND_ROWS     \li CLIENT_IGNORE_SPACE     \li CLIENT_SSL     \li CLIENT_ODBC     \li CLIENT_NO_SCHEMA     \li CLIENT_INTERACTIVE     \li UNIX_SOCKET     \li MYSQL_OPT_RECONNECT     \endlist      \li     \list     \li connect_timeout     \li options     \li tty     \li requiressl     \li service     \endlist      \header \li DB2 \li OCI \li TDS     \row      \li     \list     \li SQL_ATTR_ACCESS_MODE     \li SQL_ATTR_LOGIN_TIMEOUT     \endlist      \li     \list     \li OCI_ATTR_PREFETCH_ROWS     \li OCI_ATTR_PREFETCH_MEMORY     \endlist      \li     \e none      \header \li SQLite \li Interbase     \row      \li     \list     \li QSQLITE_BUSY_TIMEOUT     \li QSQLITE_OPEN_READONLY     \li QSQLITE_ENABLE_SHARED_CACHE     \endlist      \li     \list     \li ISC_DPB_LC_CTYPE     \li ISC_DPB_SQL_ROLE_NAME     \endlist      \endtable      Examples:     \snippet code/src_sql_kernel_qsqldatabase.cpp 4      Refer to the client library documentation for more information     about the different options.      \sa connectOptions() */
+comment|/*!     Sets database-specific \a options. This must be done before the     connection is opened or it has no effect (or you can close() the     connection, call this function and open() the connection again).      The format of the \a options string is a semicolon separated list     of option names or option=value pairs. The options depend on the     database client used:      \table     \header \li ODBC \li MySQL \li PostgreSQL     \row      \li     \list     \li SQL_ATTR_ACCESS_MODE     \li SQL_ATTR_LOGIN_TIMEOUT     \li SQL_ATTR_CONNECTION_TIMEOUT     \li SQL_ATTR_CURRENT_CATALOG     \li SQL_ATTR_METADATA_ID     \li SQL_ATTR_PACKET_SIZE     \li SQL_ATTR_TRACEFILE     \li SQL_ATTR_TRACE     \li SQL_ATTR_CONNECTION_POOLING     \li SQL_ATTR_ODBC_VERSION     \endlist      \li     \list     \li CLIENT_COMPRESS     \li CLIENT_FOUND_ROWS     \li CLIENT_IGNORE_SPACE     \li CLIENT_SSL     \li CLIENT_ODBC     \li CLIENT_NO_SCHEMA     \li CLIENT_INTERACTIVE     \li UNIX_SOCKET     \li MYSQL_OPT_RECONNECT     \endlist      \li     \list     \li connect_timeout     \li options     \li tty     \li requiressl     \li service     \endlist      \header \li DB2 \li OCI \li TDS     \row      \li     \list     \li SQL_ATTR_ACCESS_MODE     \li SQL_ATTR_LOGIN_TIMEOUT     \endlist      \li     \list     \li OCI_ATTR_PREFETCH_ROWS     \li OCI_ATTR_PREFETCH_MEMORY     \endlist      \li     \e none      \header \li SQLite \li Interbase     \row      \li     \list     \li QSQLITE_BUSY_TIMEOUT     \li QSQLITE_OPEN_READONLY     \li QSQLITE_OPEN_URI     \li QSQLITE_ENABLE_SHARED_CACHE     \endlist      \li     \list     \li ISC_DPB_LC_CTYPE     \li ISC_DPB_SQL_ROLE_NAME     \endlist      \endtable      Examples:     \snippet code/src_sql_kernel_qsqldatabase.cpp 4      Refer to the client library documentation for more information     about the different options.      \sa connectOptions() */
 end_comment
 begin_function
 DECL|function|setConnectOptions
